[package]
name = "libtad-rs"
version = "0.1.0"
edition = "2018"
authors = ["Daniel Alvsåker <daniel@timeanddate.com>"]
categories = ["api-bindings"]
keywords = ["time", "date", "timeanddate", "api"]
license = "MIT"
description = "Rust library for accessing Time and Date APIs"
homepage = "https://services.timeanddate.com"
repository = "https://github.com/timeanddate/libtad-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# API models
libtad-models = { path = "libtad-models", version = "0.1" }

# Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL handling
serde_url_params = "0.2"
url = "2.2"

# Authentication
base64 = "0.13"
chrono = "0.4"
hmac = "0.11"
sha-1 = "0.9"

# Optional async handling
async-trait = { version = "0.1", optional = true }
maybe-async = "0.2"

# HTTP clients
reqwest = { version = "0.11", optional = true, default-features = false, features = ["json", "rustls-tls"] }
attohttpc = { version = "0.17", optional = true, default-features = false, features = ["json", "tls-rustls"] }

[workspace]
members = ["libtad-models"]

[features]
default = ["sync-client"]
async-client = ["reqwest", "__async"]
sync-client = ["attohttpc", "__sync"]

__async = ["async-trait"]
__sync = ["maybe-async/is_sync"]

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
