[package]
name = "libtad-models"
version = "0.2.0"
edition = "2018"
authors = ["Daniel Alvsåker <daniel@timeanddate.com>"]
keywords = ["time", "date", "timeanddate", "api"]
license = "MIT"
description = "Time and Date API models"
homepage = "https://dev.timeanddate.com"
repository = "https://github.com/timeanddate/libtad-rs"
documentation = "https://docs.rs/libtad-models"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.2", features = ["serde"] }
